@@ -1,3 +1,8 @@
+1999-08-11  Martin v. Loewis  <martin@mira.isdn.cs.tu-berlin.de>
+
+	* lex.c (do_identifier): If we find a hidden type after a global
+	was selected already, continue using the global.
+
 1999-08-10  Martin v. Loewis  <martin@mira.isdn.cs.tu-berlin.de>
 
 	* decl2.c (set_decl_namespace): Do not complain about non-matching
